--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="community with elz3em">
     <meta name="keywords" content="community, with, php, python,">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="hh/coding_computer_pc_screen_code_icon_193925.ico">
+    <link rel="icon" href="coding_computer_pc_screen_code_icon_193925.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
@@ -31,13 +31,13 @@
                 <h3>I'm a <span>Fell-stack </span>developr.</h3>
                 <div class="social">
                     
-                    <a href="https://wa.me/message/UOEZG6OSTCEKI1" target="_blank"><img src="hh/whatsapp_108042.png" alt=""></a>
-                    <a href="https://t.me/y_e2u" target="_blank"><img src="hh/1486146469-telegram_79439.png" alt=""></a>
-                    <a href="https://www.facebook.com/profile.php?id=100083418672343&mibextid=ZbWKwL" target="_blank"><img src="hh/facebook_108044.png" alt=""></a>
+                    <a href="https://wa.me/message/UOEZG6OSTCEKI1" target="_blank"><img src="whatsapp_108042.png" alt=""></a>
+                    <a href="https://t.me/y_e2u" target="_blank"><img src="1486146469-telegram_79439.png" alt=""></a>
+                    <a href="https://www.facebook.com/profile.php?id=100083418672343&mibextid=ZbWKwL" target="_blank"><img src="facebook_108044.png" alt=""></a>
                 </div>
             </div>
             <div class="container-images">
-                <img src="hh/4ah65fhnrlourke6s6sid81lfk.png" alt="" class="shape">
+                <img src="4ah65fhnrlourke6s6sid81lfk.png" alt="" class="shape">
                 <img src="" alt="" class="mypic">
             </div>
 
@@ -46,7 +46,7 @@
     </section>
     <section class="about" id="about">
         <div class="container-imges">
-            <img src="hh/Programming-amico (2).png" alt="" width="490" height="500">
+            <img src="Programming-amico (2).png" alt="" width="490" height="500">
 
         </div>
         <div class="container-texts">
